src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__format.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
format("{a} {b} {c}", {a:0, b:"b", c:true})
}

OK
"0 b true"
