src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__format_bad_invalid_arg_name.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
format("{a-b}", {})
}

ERROR
argument names must be valid identifier
2 |  format("{a-b}", {})
  |  ^^^^^^^^^^^^^^^^^^^


DISASM:

.fn @main
  params 0
  stack 3
  .code
  0  lstr r1, "{a-b}"
  1  ltable r2, 0
  2  call r0, format
  3  ret
