src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__format_bad_missing_arg.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
format("{a}", {})
}

ERROR
missing argument a
2 |  format("{a}", {})
  |  ^^^^^^^^^^^^^^^^^


DISASM:

.fn @main
  params 0
  stack 3
  .code
  0  lstr r1, "{a}"
  1  ltable r2, 0
  2  call r0, format
  3  ret
