src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__function_call.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
fn f() { 100 }

f()
}

OK
Int(100)
