src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__function_call_mid_stack_nargs_0.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
fn f() {
  let a = 10 // r1
}

let a = 0 // r1
let v = 0 // r2
let b = 0 // r3

v = f() // dst is not at top, nargs = 0

b

// f0: [ r0, r1, r2, r3 ]
// f1:         [ r0, r1 ]
//
}

OK
Int(0)
