src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__function_call_nested.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
fn a() { 100 }
fn b() { a() }

b()

OK
Int(100)
