src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__function_call_nested_reverse.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
fn a() { b() }
fn b() { 100 }

a()

OK
Int(100)
