src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__function_call_outer_scope_upvalue_1.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
//module
fn main() {
  fn outer() {
    fn inner() {
      // `outer` has a `rec` upvalue, which `inner` references:
      outer
    }

    inner()
  }

  outer()
}

main()

OK
Closure { name: "outer", .. }
