src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__function_call_outer_scope_upvalue_2.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
//module
fn main() {
  fn outer() {
    fn nested() {
      fn inner() {
        // `outer` has a `rec` upvalue, which `inner` references,
        // which should work at arbitrary depth:
        outer
      }

      inner()
    }

    nested()
  }

  outer()
}

main()

OK
Closure { name: "outer", .. }
