src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__function_call_var.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
fn a(f) {
  f()
}

fn b() {
  "ok"
}

a(b)

OK
"ok"
